# SmartFAQ

./: .gitignore  Makefile  README.md
.github/workflows/: test.yml
backend/: .dockerignore  .env.local.template  .gitignore  Dockerfile  entrypoint.sh  manage.py  managedb.sh  pyproject.toml  requirements.txt
backend/auths/: adapter.py  custom_ws_middleware.py  models.py  serializers.py
backend/auths/management/commands/: setup_google_provider.py
backend/auths/migrations/: 0001_initial.py
backend/backend/: asgi.py  urls.py
backend/backend/settings/: __init__.py  base.py  docker.py  local.py  prod.py  secret_template.py
backend/core/: asgi.py  urls.py  wsgi.py
backend/core/settings/: __init__.py  base.py  secret_template.py  test.py
backend/faq/: admin.py  async_faq_generator.py  consumers.py  exceptions.py  faq_generator.py  managers.py  models.py  routing.py  serializers.py  services.py  urls.py  views.py
backend/faq/helpers/: async_faq_generator.py  consumers.py  faq_generator.py
backend/faq/management/commands/: ollama.py  populate_faqs.py  setup_all.py  setup_demo.py
backend/faq/migrations/: 0001_initial.py  0002_faq_number_of_faqs.py  0003_faq_tone.py  0004_faq_category.py  0005_alter_faq_tone.py
backend/faq/selectors/: __init__.py  statistics_selector.py
backend/faq/templates/faq/: pdf_template.html
backend/tests/: conftest.py
backend/tests/auths/: adapter.py  models.py  serializers.py
backend/tests/faq/: models.py  serializers.py  services.py  test_views.py  views.py
backend/tests/faq/models/: faq.py  qa.py
backend/tests/faq/selectors/: tests.py
backend/tests/faq/services/: tests.py
backend/v1/: urls.py  views.py
deployment/: Dockerfile  docker-compose.yml  nginx.conf
deployment/env.template/: backend.env  frontend.env  postgres.env
frontend/: .dockerignore  .env.template  .eslintrc.json  Dockerfile  entrypoint.sh  package-lock.json  package.json  template.env  tsconfig.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/api/auth/: config.ts
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/app/api/auth/signup/: route.ts
frontend/src/app/api/faq/: route.ts
frontend/src/app/api/faq/[slug]/: route.ts
frontend/src/app/api/faq/[slug]/download/: route.ts
frontend/src/app/api/scrape/: route.ts
frontend/src/app/api/statistics/: route.ts
frontend/src/app/api/upload-pdf/: route.ts
frontend/src/app/auth/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/faq/[id]/: page.tsx
frontend/src/app/faq/[id]/: page.tsx
frontend/src/app/faqs/: columns.tsx  page.tsx
frontend/src/app/test/: page.tsx
frontend/src/app/test/[id]/: page.tsx
frontend/src/components/: footer.tsx  header.tsx  layout-wrapper.tsx  providers.tsx  table-skeleton.tsx  theme-toggle.tsx
frontend/src/components/faq/: faq-generator.tsx  faq-input.tsx  faq-list.tsx  faq-options.tsx  file-upload.tsx  generated-faqs.tsx  loading-skeleton.tsx  source-selector.tsx  url-input.tsx
frontend/src/components/landingPage/: footer.tsx  header.tsx  hero.tsx  how-it-works.tsx  start-today.tsx  why-choose-us.tsx
frontend/src/hooks/: useFAQGeneration.ts  useFAQs.ts  useStatistics.ts  useWebSocket.ts
frontend/src/lib/: config.ts  utils.ts
frontend/src/lib/errors/: index.ts
frontend/src/services/: faqService.ts  pdfService.ts  scrapeService.ts
frontend/src/types/: api.ts  auth.ts  websocket.ts
